Updated Controller for functionality CountStudentsInProgrammesFromDepartmentInGivenSchoolYear + tests- Refs #394 #463